*ADD & SWAGGER* get converations of user
